[gd_scene load_steps=11 format=3 uid="uid://boa5vh1f0omdk"]

[ext_resource type="Texture2D" uid="uid://b53qsg6e2h24d" path="res://Assets/Aulas Professor/itens/Common Pick-ups/coin/1.png" id="1_5w8oi"]
[ext_resource type="Script" uid="uid://c5vqps4nxnfex" path="res://scripts/control.gd" id="1_o1krt"]
[ext_resource type="Texture2D" uid="uid://c74u1b2fdk17i" path="res://Assets/Aulas Professor/itens/Common Pick-ups/coin/2.png" id="2_o1krt"]
[ext_resource type="Texture2D" uid="uid://x5lhv474iveh" path="res://Assets/Aulas Professor/itens/Common Pick-ups/coin/3.png" id="3_q14tb"]
[ext_resource type="Texture2D" uid="uid://txtta73ovb57" path="res://Assets/Aulas Professor/itens/Common Pick-ups/coin/4.png" id="4_fem2x"]
[ext_resource type="Texture2D" uid="uid://d2vbt2cwyb5n7" path="res://Assets/Aulas Professor/itens/Common Pick-ups/coin/5.png" id="5_3ah7h"]
[ext_resource type="Script" uid="uid://d1if2u3w0coco" path="res://scripts/vidas.gd" id="7_fem2x"]
[ext_resource type="Texture2D" uid="uid://b7lqwwuhm8ony" path="res://Assets/01 - Personagens/Principal/Gangsters_2/cabe√ßa.png" id="8_3ah7h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ij8b6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5w8oi")
}, {
"duration": 1.0,
"texture": ExtResource("2_o1krt")
}, {
"duration": 1.0,
"texture": ExtResource("3_q14tb")
}, {
"duration": 1.0,
"texture": ExtResource("4_fem2x")
}, {
"duration": 1.0,
"texture": ExtResource("5_3ah7h")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_w1gc1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_3ah7h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="HUD" type="CanvasLayer"]

[node name="control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1krt")

[node name="container" type="MarginContainer" parent="control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="moedas_container" type="HBoxContainer" parent="control/container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="anim" type="AnimatedSprite2D" parent="control/container/moedas_container"]
position = Vector2(-14, 11)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_ij8b6")
autoplay = "default"
frame_progress = 0.486156

[node name="contador_moeda" type="Label" parent="control/container/moedas_container"]
layout_mode = 2
theme_override_constants/outline_size = 4
text = "0000"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_fem2x")

[node name="game_over_label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 268.0
offset_top = 162.0
offset_right = 360.0
offset_bottom = 185.0
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="vida_container" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="vida" type="TextureRect" parent="Control/vida_container"]
layout_mode = 2

[node name="anim" type="AnimatedSprite2D" parent="Control/vida_container/vida"]
position = Vector2(81, 19)
sprite_frames = SubResource("SpriteFrames_w1gc1")

[node name="contador_vida" type="Label" parent="Control/vida_container/vida/anim"]
offset_left = 12.0
offset_top = -11.0
offset_right = 49.0
offset_bottom = 12.0
theme_override_constants/outline_size = 4
text = "00"
